--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,11 @@
   "version": 2,
   "builds": [
     {
-      "src": "./server.js",
+      "src": "server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/api/v1/$1"
-    },
     {
       "src": "/(.*)",
       "dest": "/server.js"
